jilles      2005/10/22 20:00:08 UTC	(20051022-3119)
  Log:
  Better STOPIC checking using new channel_t.topicts.
  

  Changes:	Modified:
  +1 -2		trunk/protocol/hyperion.c (File Modified) 


alambert    2005/10/22 19:50:44 UTC	(20051022-3117)
  Log:
  myuser_delete(): add more debug scaffolding so pfish can test.

  Changes:	Modified:
  +13 -0	trunk/src/node.c (File Modified) 


jilles      2005/10/22 18:48:52 UTC	(20051022-3115)
  Log:
  Setting an empty topic is clearing the topic.
  

  Changes:	Modified:
  +13 -7	trunk/modules/chanserv/set.c (File Modified) 
  +7 -2		trunk/src/ptasks.c (File Modified) 


jilles      2005/10/22 18:25:46 UTC	(20051022-3113)
  Log:
  Add help for /cs set keeptopic, improve help for /cs set founder.
  

  Changes:	Modified:
  +12 -3	trunk/help/cservice/set_founder (File Modified) 
  +13 -0	trunk/help/cservice/set_keeptopic (File Added) 
  +2 -1		trunk/modules/chanserv/help.c (File Modified) 
  +2 -0		trunk/modules/chanserv/set.c (File Modified) 


jilles      2005/10/22 15:16:24 UTC	(20051022-3111)
  Log:
  In ratbox and charybdis, use TB to restore old topics.
  This reduces noise and also restores topicsetter (nick
  only) and topicts.
  

  Changes:	Modified:
  +14 -0	trunk/protocol/charybdis.c (File Modified) 
  +14 -0	trunk/protocol/ratbox.c (File Modified) 


jilles      2005/10/22 14:51:17 UTC	(20051022-3109)
  Log:
  Finally remove that "%s (%s)", topic, setter stuff.
  It doesn't really work with topic bursting.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/charybdis.c (File Modified) 
  +1 -1		trunk/protocol/inspircd.c (File Modified) 
  +1 -1		trunk/protocol/ircnet.c (File Modified) 
  +1 -1		trunk/protocol/plexus.c (File Modified) 
  +1 -1		trunk/protocol/ratbox.c (File Modified) 
  +1 -1		trunk/protocol/scylla.c (File Modified) 
  +1 -1		trunk/protocol/shadowircd.c (File Modified) 


jilles      2005/10/22 14:50:38 UTC	(20051022-3107)
  Log:
  Fix crash in last commit.
  

  Changes:	Modified: