@@ -5,7 +5,7 @@
  * This file contains data structures, and functions to
  * manipulate them.
  *
- * $Id: node.c 3121 2005-10-22 20:23:55Z alambert $
+ * $Id: node.c 3123 2005-10-22 20:31:22Z alambert $
  */
 
 #include "atheme.h"
@@ -1106,30 +1106,22 @@ void myuser_delete(char *name)
 	if (sra_find(mu))
 		sra_delete(mu);
 
-	/* orphan any nicknames pointing to them */
+	/* orphan any nicknames pointing to them
+	 * this is slow -- we could fix by adding reverse lists
+	 */
 	for (i = 0; i < HASHSIZE; i++)
 	{
 		LIST_FOREACH(n, mulist[i].head)
 		{
 			tmu = (myuser_t *)n->data;
 
-			slog(LG_DEBUG, "myuser_delete(%s): link: trying %s", mu->name, tmu->name);
-
-			if (!(md = metadata_find(tmu, METADATA_USER, "private:alias:parent")))
-				slog(LG_DEBUG, "myuser_delete(%s): link: link metadata for %s doesn't exist", mu->name, tmu->name);
-			else
-			{
-				slog(LG_DEBUG, "myuser_delete(%s): link: link metadata for %s exists: %s", mu->name, tmu->name, md->value);
-
-				if (!irccasecmp(mu->name, md->value))
-					slog(LG_DEBUG, "myuser_delete(%s): link: found match; should remove link %s->%s", tmu->name, mu->name);
-			}
-
-#if 0
 			if ((md = metadata_find(tmu, METADATA_USER, "private:alias:parent"))
 				&& !irccasecmp(mu->name, md->value))
+			{
+				slog(LG_DEBUG, "myuser_delete(): deleting %s; removing alias from %s to %s",
+					mu->name, tmu->name, mu->name)
 				metadata_delete(tmu, METADATA_USER, "private:alias:parent");
-#endif
+			}
 		}
 	}
 
